# VideoAI

./: .env.example  .gitignore  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: analytics.py  auth.py  publishing.py  series.py  users.py  videos.py  webhooks.py
backend/app/core/: config.py  database.py  security.py  token_revocation.py
backend/app/migrations/: env.py
backend/app/models/: __init__.py  base.py  platform_connection.py  publish_job.py  series.py  subscription.py  user.py  video.py
backend/app/schemas/: auth.py  series.py  user.py  video.py
backend/app/services/hooks/: hook_optimizer.py
backend/app/services/llm/: script_generator.py
backend/app/services/media/: stock_provider.py
backend/app/services/publishing/: instagram_publisher.py  oauth_exchange.py  tiktok_publisher.py  youtube_publisher.py
backend/app/services/tts/: tts_service.py
backend/app/services/video/: renderer.py  storage.py
backend/app/tasks/: analytics.py  celery_app.py  publishing.py  scheduler.py  video_pipeline.py
backend/app/tests/: conftest.py
backend/app/tests/unit/: test_auth.py  test_security.py  test_series.py
frontend/: next.config.js  package.json  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/auth/: page.tsx
frontend/src/lib/: api.ts
frontend/src/store/: auth-store.ts
frontend/src/styles/: globals.css
frontend/src/types/: index.ts
scripts/: setup.sh
(+9 files in other folders)
